# romdbLauncher

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  romdbLauncher.sln  romdbLauncher.vcxproj
.github/workflows/: main.yml
src/: 7zip.cpp  Resource.h  config.cpp  config.h  file.cpp  file.h  framework.h  main.cpp  mainForm.cpp  mainForm.h  romdb.cpp  romdb.h  romdbLauncher.rc  searchResultsLv.cpp  searchResultsLv.h  targetver.h  utils.cpp  utils.h  wapp.cpp  wapp.h  wbutton.cpp  wbutton.h  wcontrol.cpp  wcontrol.h  wform.cpp  wform.h  wlistview.cpp  wlistview.h  wtextbox.cpp  wtextbox.h
